# AgriNova-AI-Assistant

./: .env.example  .gitignore  README.md  metadata.json  package.json  pyproject.toml  requirements.txt  run.py  server.ts
app/: __init__.py  config.py
app/routes/: chat.py  main.py
app/services/: llm_service.py  prompt_manager.py  stt_service.py  tts_service.py
app/static/: manifest.webmanifest
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: index.html
